# pointy-stick

./: .env.example  .gitignore  .npmignore  ACTION_PLAN.md  ACTION_PLAN_2026.md  AGENTS.md  APEX_DYAD.md  CLAUDE.md  CODEBASE_REVIEW_2026-01-24.md  CODEBASE_REVIEW_2026.md  CODEBASE_REVIEW_2026_01_23.md  CODEBASE_REVIEW_AND_TEST_REPORT.md  CODEBASE_REVIEW_REPORT.md  COLLAPSE.md  COMPREHENSIVE_CODEBASE_REVIEW_2026_01_19.md  COMPREHENSIVE_REVIEW_2026.md  COMPREHENSIVE_REVIEW_2026_01_18.md  COMPREHENSIVE_REVIEW_2026_01_23.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONSTITUTION.md  CONTRIBUTING.md  DYNAMIC_INTERFACE_PLAN.md  ECOSYSTEMS  EXPONENTIAL_EXTRAPOLATION.md  EnFn-SCALING.md  En_Fn_scaling_step_by_step.md  FIXES_APPLIED_2026-01-24.md  FRESH_REVIEW_2026_01_18.md  INSIGHTS.md  JULIA_VERIFICATION_ADDENDUM.md  LICENSE  MANIFEST.in  MASTER_KEY.md  MCP_SERVER_ENHANCEMENTS.md  MCP_SERVER_TEST_REPORT.md  Makefile  NEXT_STEPS_2026.md  PRIORITY_1_COMPLETE.md  PROMPT.md  PR_DESCRIPTION.md  (+23 more)
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: README.md  ci.yml  test.yml
.husky/: pre-commit
benchmarks/: RESULTS.md  benchmark-javascript.js  benchmark_python.py  compare_all.py  results_javascript.json  results_python.json
docs/: BENCHMARKS.md  ERDOS_PROOFS.md  IMPLEMENTATION.md  INDEX.md
docs/api/: API_REFERENCE.md
docs/benchmarking/: AI_MODEL_BENCHMARKING.md
examples/javascript/: basic-usage.js
examples/julia/: basic_usage.jl
examples/python/: basic_usage.py
examples/rust/: basic_usage.rs
interface/: package-lock.json  package.json
interface/src/: App.tsx  index.css
interface/src/components/benchmarking/: AiBenchmarkingModule.css  AiBenchmarkingModule.tsx
interface/src/components/chatbot/: SonnyChatbotModule.css  SonnyChatbotModule.tsx
interface/src/components/controls/: VariableSlider.css  VariableSlider.tsx
interface/src/components/dashboard/: DynamicContext.css  DynamicContext.tsx  MainDashboard.css  MainDashboard.tsx
interface/src/components/effects/: AnimatedNumber.css  AnimatedNumber.tsx
interface/src/components/layers/: CognitivePanel.css  CognitivePanel.tsx  DynamicPanel.css  DynamicPanel.tsx  FoundationPanel.css  FoundationPanel.tsx  LayerPanel.css
interface/src/components/menu/: MainMenu.css  MainMenu.tsx
interface/src/components/scenarios/: NarrativeOverlay.css  NarrativeOverlay.tsx  ScenarioCard.css  ScenarioCard.tsx  ScenarioLibrary.css  ScenarioLibrary.tsx  scenarios.ts
interface/src/components/solutions/: MathSolutionsModule.css  MathSolutionsModule.tsx
interface/src/components/visualizations/: IntelligenceGraph.css  IntelligenceGraph.tsx
interface/src/core/: axiom.ts
interface/src/hooks/: useAxiom.ts
mcp-server/: .npmignore  CHANGELOG.md  LICENSE  MCP_QUICKSTART.md  README.md  SECURITY_FIX_SUMMARY.md  VERCEL_DEPLOYMENT.md  claude_desktop_config.example.json  demo-tool.ts  index.ts  package-lock.json  package.json  test-mcp-server.ts  test-server.js  test-tools.js  test-vercel-config.js  tsconfig.json  tsconfig.vercel.json  universal-axiom.d.ts  universal-axiom.js  vercel.json
mcp-server/api/: mcp.ts
mcp-server/helpers/: mcp-client.js
mcp-server/lib/: universal-axiom.ts
scripts/: README.md  bump-version.sh
src/javascript/: universal-axiom.d.ts  universal-axiom.d.ts.map  universal-axiom.js  universal-axiom.js.map  universal-axiom.ts
src/julia/: UniversalAxiom.jl
src/python/: __init__.py  benchmarking.py  math_solutions.py  universal_axiom.py
src/rust/: Cargo.toml  lib.rs
src/rust/benches/: universal_axiom_bench.rs
tests/: VERIFICATION.md  canonical_test_cases.json  conftest.py  golden_cases.csv  test_axiom_benchmarking.py  test_performance_regression.py  test_universal_axiom.jl  test_universal_axiom.py  universal-axiom.test.js
tests/julia/: runtests.jl
