[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-axiom"
version = "0.1.0"
description = "The Universal Axiom & The Epiphany Engine - A fundamental framework for modeling intelligence through immutable natural laws"
readme = "README.md"
authors = [
    { name = "Matt Belanger", email = "matt@epiphanyengine.ai" }
]
maintainers = [
    { name = "Matt Belanger", email = "matt@epiphanyengine.ai" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "universal-axiom",
    "epiphany-engine",
    "intelligence",
    "ai",
    "reasoning",
    "consciousness",
    "mathematics",
    "fibonacci",
    "golden-ratio",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.16.0",
]

[project.urls]
Homepage = "https://www.epiphanyengine.ai"
Documentation = "https://github.com/TheUniversalAxiom/pointy-stick/tree/main/docs"
Repository = "https://github.com/TheUniversalAxiom/pointy-stick"
"Bug Tracker" = "https://github.com/TheUniversalAxiom/pointy-stick/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["python"]

[tool.setuptools.package-data]
python = ["*.py"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/python --cov-report=term-missing"
