[package]
name = "universal-axiom"
version = "0.1.0"
edition = "2021"
authors = ["Matt Belanger <matt@epiphanyengine.ai>"]
description = "The Universal Axiom & The Epiphany Engine - A fundamental framework for modeling intelligence through immutable natural laws"
license = "MIT"
readme = "../../README.md"
homepage = "https://www.epiphanyengine.ai"
repository = "https://github.com/TheUniversalAxiom/pointy-stick"
documentation = "https://docs.rs/universal-axiom"
keywords = ["axiom", "intelligence", "reasoning", "ai", "fibonacci"]
categories = ["science", "mathematics", "algorithms"]
exclude = [
    "target/*",
    "examples/*",
    "benchmarks/*",
    "tests/*",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "universal_axiom"
path = "lib.rs"

[[example]]
name = "basic_usage"
path = "../../examples/rust/basic_usage.rs"

[[bench]]
name = "universal_axiom_bench"
harness = false
